--- a/index.html
+++ b/index.html
@@ -27,37 +27,37 @@
         <div class="question">
           <p>Why shouldn't we trust atoms?</p>
           <span><i class="fa-solid fa-angle-down"></i></span>
+          <!-- <span><i class="fa-solid fa-circle-xmark"></i></span> -->
         </div>
-        <!-- <span><i class="fa-solid fa-circle-xmark"></i></span> -->
-        <!-- <small>They make up everything</small> -->
+        <small class="answer">They make up everything</small>
       </div>
       <div class="box">
         <div class="question">
           <p>What do you call someone with no body and nose?</p>
           <span><i class="fa-solid fa-angle-down"></i></span>
-          <!-- <small>Nobody knows</small> -->
         </div>
+        <small class="answer">Nobody knows</small>
       </div>
       <div class="box">
         <div class="question">
           <p>What's the object-oriented way to become wealthy?</p>
           <span><i class="fa-solid fa-angle-down"></i></span>
-          <!-- <small>Inheritance</small> -->
         </div>
+        <small class="answer">Inheritance</small>
       </div>
       <div class="box">
         <div class="question">
           <p>How many tickles does it take to tickle an octopus?</p>
           <span><i class="fa-solid fa-angle-down"></i></span>
-          <!-- <small>Ten-tickles!</small> -->
         </div>
+        <small class="answer">Ten-tickles!</small>
       </div>
       <div class="box">
         <div class="question">
           <p>What is: 1+1</p>
           <span><i class="fa-solid fa-angle-down"></i></span>
-          <!-- <small>Depends on who are you asking</small> -->
         </div>
+        <small class="answer">Depends on who are you asking</small>
       </div>
     </div>
 
