--- a/index.html
+++ b/index.html
@@ -16,48 +16,65 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>FAQ</title>
   </head>
 
   <body>
-    <div class="container">
-      <h1>Frequently Asked Questions</h1>
-      <div class="box">
-        <div class="question">
-          <p>Why shouldn't we trust atoms?</p>
-          <span><i class="fa-solid fa-angle-down"></i></span>
-          <!-- <span><i class="fa-solid fa-circle-xmark"></i></span> -->
-        </div>
-        <small class="answer">They make up everything</small>
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+      <div class="faq">
+        <h3 class="faq-title">Why shouldn't we trust atoms?</h3>
+        <p class="faq-text">They make up everything</p>
+        <button class="faq-toggle">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-circle-xmark"></i>
+        </button>
       </div>
-      <div class="box">
-        <div class="question">
-          <p>What do you call someone with no body and nose?</p>
-          <span><i class="fa-solid fa-angle-down"></i></span>
-        </div>
-        <small class="answer">Nobody knows</small>
+      <div class="faq">
+        <h3 class="faq-title">
+          What do you call someone with no body and nose?
+        </h3>
+        <p class="faq-text">Nobody knows</p>
+        <button class="faq-toggle">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-circle-xmark"></i>
+        </button>
       </div>
-      <div class="box">
-        <div class="question">
-          <p>What's the object-oriented way to become wealthy?</p>
-          <span><i class="fa-solid fa-angle-down"></i></span>
-        </div>
-        <small class="answer">Inheritance</small>
+      <div class="faq">
+        <h3 class="faq-title">
+          What's the object-oriented way to become wealthy?
+        </h3>
+        <p class="faq-text">Inheritance</p>
+        <button class="faq-toggle">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-circle-xmark"></i>
+        </button>
       </div>
-      <div class="box">
-        <div class="question">
-          <p>How many tickles does it take to tickle an octopus?</p>
-          <span><i class="fa-solid fa-angle-down"></i></span>
-        </div>
-        <small class="answer">Ten-tickles!</small>
+      <div class="faq">
+        <h3 class="faq-title">
+          How many tickles does it take to tickle an octopus?
+        </h3>
+        <p class="faq-text">Ten-tickles!</p>
+        <button class="faq-toggle">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-circle-xmark"></i>
+        </button>
       </div>
-      <div class="box">
-        <div class="question">
-          <p>What is: 1+1</p>
-          <span><i class="fa-solid fa-angle-down"></i></span>
-        </div>
-        <small class="answer">Depends on who are you asking</small>
+      <div class="faq">
+        <h3 class="faq-title">What is: 1+1</h3>
+        <p class="faq-text">Depends on who are you askin</p>
+        <button class="faq-toggle">
+          <i class="fa-solid fa-angle-down"></i>
+          <i class="fa-solid fa-circle-xmark"></i>
+        </button>
       </div>
     </div>
 
